--- a/deployment.yml
+++ b/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: tetris
-        image: aadeleke12/tetrisv1:2
+        image: aadeleke12/tetrisv1:latest
         ports:
         - containerPort: 3000   # Use port 3000
 
